DevOps: amélioration health endpoints

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Tests automatiques Garoui Electricité
+name: 🚀 DevOps Pipeline - Garoui Electricité
 
 on:
   push:
@@ -7,25 +7,90 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  # ============ PHASE TESTS ============
+  tests:
+    name: 🧪 Tests automatiques
     runs-on: ubuntu-latest
     
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x, 20.x]
+    
     steps:
-    - name: 📥 Récupérer le code
+    - name: 📥 Récupération du code
       uses: actions/checkout@v4
       
-    - name: 🟢 Installer Node.js
+    - name: 🟢 Installation Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
         
-    - name: 📦 Installer les dépendances
-      run: npm ci
+    - name: 📦 Installation des dépendances
+      run: |
+        npm ci
+        echo "✅ Dépendances installées"
+        
+    - name: 🧪 Exécution des tests
+      run: |
+        npm test
+        echo "✅ Tests DevOps réussis"
+        
+    - name: 🔍 Audit de sécurité
+      run: |
+        npm audit --audit-level=high
+        echo "✅ Audit sécurité terminé"
+        
+    - name: 🏗️ Test de build
+      run: |
+        npm run build
+        echo "✅ Build validé"
+
+  # ============ PHASE DÉPLOIEMENT ============
+  deploy:
+    name: 🚀 Déploiement Production
+    needs: tests
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    
+    steps:
+    - name: 📥 Récupération du code
+      uses: actions/checkout@v4
       
-    - name: 🧪 Lancer les tests
-      run: npm test
+    - name: 🚀 Déploiement sur Render.com
+      run: |
+        echo "🚀 Déploiement automatique déclenché"
+        echo "✅ Render.com va récupérer le code automatiquement"
+        echo "🔗 URL de production sera disponible après déploiement"
+        
+    - name: ⏱️ Attente stabilisation (30s)
+      run: sleep 30
       
-    - name: ✅ Tests réussis !
-      if: success()
-      run: echo "Tous les tests sont passés avec succès !"
+    - name: 🏥 Test de santé en production
+      run: |
+        echo "🏥 Tests de santé seront configurés après déploiement Render"
+        echo "✅ Pipeline de déploiement terminé"
+
+  # ============ NOTIFICATION ============
+  notify:
+    name: 📢 Notifications
+    needs: [tests, deploy]
+    runs-on: ubuntu-latest
+    if: always()
+    
+    steps:
+    - name: ✅ Succès complet
+      if: needs.tests.result == 'success' && needs.deploy.result == 'success'
+      run: |
+        echo "🎉 SUCCÈS COMPLET !"
+        echo "✅ Tests passés sur toutes les versions Node.js"
+        echo "✅ Déploiement réussi sur Render.com"
+        echo "✅ Application prête en production"
+        
+    - name: ❌ Échec détecté
+      if: needs.tests.result != 'success' || needs.deploy.result != 'success'
+      run: |
+        echo "❌ ÉCHEC DÉTECTÉ"
+        echo "Tests: ${{ needs.tests.result }}"
+        echo "Deploy: ${{ needs.deploy.result }}"
+        echo "Vérifiez les logs ci-dessus"
