--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "Backend pour l'application web Garoui Electricité",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "migrate": "node scripts/migrate.js",
-    "seed": "node scripts/seed.js"
-  },
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "test": "jest --detectOpenHandles --forceExit",
+  "test:watch": "jest --watch",
+  "test:coverage": "jest --coverage",
+  "migrate": "node scripts/migrate.js",
+  "seed": "node scripts/seed.js",
+  "build": "echo 'Build completed - Ready for production'",
+  "health-check": "curl http://localhost:3000/api/health",
+  "postinstall": "echo 'Dependencies installed successfully'"
+},
+"engines": {
+  "node": ">=16.0.0",
+  "npm": ">=8.0.0"
+},
   "keywords": [
     "electricité",
     "recrutement",
