--- a/env.example
+++ b/env.example
@@ -29,3 +29,7 @@ EMAIL_PASS=your_email_password
 BCRYPT_ROUNDS=12
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100 
+
+# CORS (liste d'origines autorisées, séparées par des virgules)
+# Exemple: https://garoui-electricite.com,http://localhost:5173
+ALLOWED_ORIGINS=
